--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -30,10 +30,9 @@ apps:
     plugs:
       - home
       - gsettings
+      - desktop
     slots:
       - dbus-simpleslideshow
-    environment:
-      GTK_USE_PORTAL: "1"
 
 parts:
   simpleslideshow:
