--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,7 +1,10 @@
 name: simpleslideshow
+title: Simple Slideshow Wallpapers
 base: core24
-version: '1.0.0'
+version: "1.0.0"
 summary: GNOME wallpaper slideshow configurator
+license: MIT
+source-code: https://github.com/s-g-stavely/SimpleSlideshow
 description: |
   A simple application to create and configure desktop wallpaper slideshows
   on Ubuntu/GNOME. Select images, set duration and timing, and apply.
